modify api gateway and donation service
