# api-gateway/docs/swagger.json
@@ -10,6 +10,36 @@
     "basePath": "/api/v1/",
     "paths": {
         "/donations": {
+            "get": {
+                "description": "Get all donations for an active user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "donations"
+                ],
+                "summary": "Get all donations for a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003caccess_token\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new donation for a user",
                 "consumes": [
@@ -32,11 +62,11 @@
                     },
                     {
                         "description": "Donation object",
-                        "name": "entity.Donation",
+                        "name": "entity.DonationRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Donation"
+                            "$ref": "#/definitions/entity.DonationRequest"
                         }
                     }
                 ],
@@ -117,11 +147,11 @@
                     },
                     {
                         "description": "Donation object",
-                        "name": "model.Donation",
+                        "name": "entity.DonationRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Donation"
+                            "$ref": "#/definitions/entity.DonationRequest"
                         }
                     }
                 ],
@@ -136,6 +166,36 @@
             }
         },
         "/transactions": {
+            "get": {
+                "description": "Get all transactions for an active user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Get all transactions for a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003caccess_token\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new transaction for a user",
                 "consumes": [
@@ -158,11 +218,11 @@
                     },
                     {
                         "description": "Transaction object",
-                        "name": "model.Transaction",
+                        "name": "entity.TransactionRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Transaction"
+                            "$ref": "#/definitions/entity.TransactionRequest"
                         }
                     }
                 ],
@@ -176,7 +236,7 @@
                 }
             }
         },
-        "/transactions/check-update-transaction/{id}": {
+        "/transactions/sync-transaction/{id}": {
             "put": {
                 "description": "Get details of a specific transaction by its ID and check its status",
                 "consumes": [
@@ -203,15 +263,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Transaction object",
-                        "name": "model.Transaction",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.Transaction"
-                        }
                     }
                 ],
                 "responses": {
@@ -291,11 +342,11 @@
                     },
                     {
                         "description": "Transaction object",
-                        "name": "model.Transaction",
+                        "name": "entity.TransactionRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Transaction"
+                            "$ref": "#/definitions/entity.TransactionRequest"
                         }
                     }
                 ],
@@ -482,58 +533,11 @@
         }
     },
     "definitions": {
-        "entity.Campaign": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "collected_amount": {
-                    "type": "number"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "deadline": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "min_donation": {
-                    "type": "number"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "target_amount": {
-                    "type": "number"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/entity.User"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entity.Donation": {
+        "entity.DonationRequest": {
             "type": "object",
             "properties": {
                 "amount": {
                     "type": "number"
-                },
-                "campaign": {
-                    "$ref": "#/definitions/entity.Campaign"
                 },
                 "campaign_id": {
                     "type": "integer"
@@ -553,9 +557,6 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/entity.User"
-                },
                 "user_id": {
                     "type": "integer"
                 }
@@ -573,7 +574,7 @@
                 }
             }
         },
-        "entity.Transaction": {
+        "entity.TransactionRequest": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -581,9 +582,6 @@
                 },
                 "created_at": {
                     "type": "string"
-                },
-                "donation": {
-                    "$ref": "#/definitions/entity.Donation"
                 },
                 "donation_id": {
                     "type": "integer"
@@ -604,29 +602,6 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.User": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 },
                 "updated_at": {
