# api-gateway/entity/Donation.go
@@ -19,3 +19,14 @@ type Donation struct {
 func (Donation) TableName() string {
 	return "donations"
 }
+
+type DonationRequest struct {
+	ID         int       `gorm:"primaryKey" json:"id"`
+	UserID     int       `json:"user_id"`
+	CampaignID int       `json:"campaign_id"`
+	Amount     float64   `json:"amount"`
+	Message    string    `json:"message"`
+	Status     string    `json:"status"`
+	CreatedAt  time.Time `json:"created_at"`
+	UpdatedAt  time.Time `json:"updated_at"`
+}
