# api-gateway/route/route.go
@@ -2,12 +2,12 @@ package route
 
 import (
 	"os"
+	// Import the config package
 
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger" // echo-swagger middleware
 
-	// Import the config package
 	_ "github.com/rayhanadri/crowdfunding/api-gateway/docs"     // docs is generated by Swag CLI, you have to import it.
 	"github.com/rayhanadri/crowdfunding/api-gateway/entity"     // Import the model package
 	"github.com/rayhanadri/crowdfunding/api-gateway/handler"    // Import the handler package
@@ -60,10 +60,10 @@ func ExecRouter() {
 	// g.PUT("/blogs/:id", blogHandler.UpdateBlog)  //
 
 	// Donation routes
-	g.GET("/donations", donationHandler.GetAllDonations)     // Get all donations
-	g.GET("/donations/:id", donationHandler.GetDonationByID) // Get donation by ID
-	g.POST("/donations", donationHandler.CreateDonation)     // Create donation
-	g.PUT("/donations/:id", donationHandler.UpdateDonation)  // Update donation by ID
+	g.GET("/donations", donationHandler.GetAllDonations, mw.CheckAuthMiddleware)     // Get all donations
+	g.GET("/donations/:id", donationHandler.GetDonationByID, mw.CheckAuthMiddleware) // Get donation by ID
+	g.POST("/donations", donationHandler.CreateDonation, mw.CheckAuthMiddleware)     // Create donation
+	g.PUT("/donations/:id", donationHandler.UpdateDonation, mw.CheckAuthMiddleware)  // Update donation by ID
 
 	// Transaction routes
 	g.GET("/transactions", transHandler.GetAllTransaction, mw.CheckAuthMiddleware)                    // Get all transactions for a user
